--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,10 @@
-.btn {
-    border-radius: 0px;
-}
+body
+    {
+        background: #fff;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+    }
