--- a/templates/home.html
+++ b/templates/home.html
@@ -6,31 +6,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
   
   <body>
     <div class="container">
       <h1>Title</h1>
-      <p>blahblahblog</p>
+
+      <a class="btn btn-lg btn-success" href="/login">
+	<i class="fa fa-flag fa-2x pull-left"></i>Sign-up/Login</a>
+
+      <div class="input-group margin-bottom-sm">
+	<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i>Search</span>
+	<input class="form-control" type="text" placeholder="Enter query">
+      </div>
 
       <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <button type="button" class="btn">Basic Button</button>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-  </div>
+	<div class="col-sm-4">
+	  <h3>Column 1</h3>
+	  <button type="button" class="btn">Basic Button</button>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+	  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+	</div>
+	<div class="col-sm-4">
+	  <h3>Column 2</h3>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+	  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+	</div>
+	<div class="col-sm-4">
+	  <h3>Column 3</h3> 
+	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+	  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+	</div>
+      </div>
       
     </div>
 
