--- a/templates/login.html
+++ b/templates/login.html
@@ -71,7 +71,7 @@
 	<div class="modal-content">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	    <h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
+	    <h4 class="modal-title" id="myModalLabel"><a href="/terms">Terms & Conditions</a></h4>
 	  </div>
 	  <div class="modal-footer">
 	    <button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
