--- a/templates/login.html
+++ b/templates/login.html
@@ -13,20 +13,9 @@
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 	<form role="form">
-	  <h2>Please Sign Up <small>It's free and always will be.</small></h2>
+	  <h2><center>Sign-Up/Login</center></h2>
 	  <hr class="colorgraph">
-	  <div class="row">
-	    <div class="col-xs-6 col-sm-6 col-md-6">
-	      <div class="form-group">
-		<input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1">
-	      </div>
-	    </div>
-	    <div class="col-xs-6 col-sm-6 col-md-6">
-	      <div class="form-group">
-		<input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
-	      </div>
-	    </div>
-	  </div>
+
 	  <div class="form-group">
 	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Display Name" tabindex="3">
 	  </div>
@@ -53,7 +42,7 @@
 	      </span>
 	    </div>
 	    <div class="col-xs-9 col-sm-9 col-md-9">
-	      By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="/terms" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site, including our Cookie Use.
+	      By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="/terms" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site.
 	    </div>
 	  </div>
 	  
