--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,26 @@
       <a class="btn btn-lg btn-success" href="/login">
 	<i class="fa fa-flag fa-2x pull-left"></i>Sign-up/Login</a>
 
+      <nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+	  <div class="navbar-header">
+	    <a class="navbar-brand" href="#">WebsiteName</a>
+	  </div>
+	  <div>
+	    <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">Page 1</a></li>
+              <li><a href="#">Page 2</a></li> 
+              <li><a href="#">Page 3</a></li> 
+	    </ul>
+	    <ul class="nav navbar-nav navbar-right">
+              <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	    </ul>
+	  </div>
+	</div>
+      </nav>
+
       <div class="input-group margin-bottom-sm">
 	<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i>Search</span>
 	<input class="form-control" type="text" placeholder="Enter query">
