--- a/templates/login.html
+++ b/templates/login.html
@@ -13,27 +13,17 @@
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 	<form role="form">
-	  <h2><center>Sign-Up/Login</center></h2>
+	  <h2><center>Login</center></h2>
 	  <hr class="colorgraph">
 
 	  <div class="form-group">
-	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Display Name" tabindex="3">
+	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Username" tabindex="3">
 	  </div>
+
 	  <div class="form-group">
-	    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="4">
+	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Password" tabindex="5">
 	  </div>
-	  <div class="row">
-	    <div class="col-xs-6 col-sm-6 col-md-6">
-	      <div class="form-group">
-		<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="5">
-	      </div>
-	    </div>
-	    <div class="col-xs-6 col-sm-6 col-md-6">
-	      <div class="form-group">
-		<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirm Password" tabindex="6">
-	      </div>
-	    </div>
-	  </div>
+	  
 	  <div class="row">
 	    <div class="col-xs-3 col-sm-3 col-md-3">
 	      <span class="button-checkbox">
