--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,6 @@
     <div class="container">
       <h1>Title</h1>
 
-      <a class="btn btn-lg btn-success" href="/login">
-	<i class="fa fa-flag fa-2x pull-left"></i>Sign-up/Login</a>
-
       <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 	  <div class="navbar-header">
@@ -28,6 +25,18 @@
               <li><a href="#">Page 2</a></li> 
               <li><a href="#">Page 3</a></li> 
 	    </ul>
+
+	    <form action="" class="navbar-form navbar-right">
+	      <div class="input-group">
+		<input type="Search" placeholder="Search..." class="form-control" />
+		<div class="input-group-btn">
+		  <button class="btn btn-info">
+		    <span class="glyphicon glyphicon-search"></span>
+		  </button>
+		</div>
+	      </div>
+	    </form>
+	    
 	    <ul class="nav navbar-nav navbar-right">
               <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
               <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
