--- a/templates/login.html
+++ b/templates/login.html
@@ -24,22 +24,10 @@
 	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Password" tabindex="5">
 	  </div>
 	  
-	  <div class="row">
-	    <div class="col-xs-3 col-sm-3 col-md-3">
-	      <span class="button-checkbox">
-		<button type="button" class="btn" data-color="info" tabindex="7">I Agree</button>
-		<input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
-	      </span>
-	    </div>
-	    <div class="col-xs-9 col-sm-9 col-md-9">
-	      By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="/terms" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site.
-	    </div>
-	  </div>
 	  
 	  <hr class="colorgraph">
-	  <div class="row">
-	    <div class="col-xs-6 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-	    <div class="col-xs-6 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Sign In</a></div>
+	  <div class="form-group">
+	    <a href="#" class="btn btn-success btn-block btn-lg">Sign In</a>
 	  </div>
 	</form>
       </div>
