--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,9 +19,6 @@
 	  <div class="form-group">
 	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Username" tabindex="3">
 	  </div>
-	  <div class="form-group">
-	    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="4">
-	  </div>
 	  <div class="row">
 	    <div class="col-xs-6 col-sm-6 col-md-6">
 	      <div class="form-group">
@@ -47,9 +44,9 @@
 	  </div>
 	  
 	  <hr class="colorgraph">
-	  <div class="row">
-	    <div class="col-xs-6 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-	    <div class="col-xs-6 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Sign In</a></div>
+	  <div class="form-group">
+	    <input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7">
+	  
 	  </div>
 	</form>
       </div>
