--- a/templates/home.html
+++ b/templates/home.html
@@ -21,9 +21,8 @@
 	  <div>
 	    <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Page 1</a></li>
-              <li><a href="#">Page 2</a></li> 
-              <li><a href="#">Page 3</a></li> 
+              <li><a href="/myaccount">My Account</a></li>
+              <li><a href="/about">About</a></li> 
 	    </ul>
 
 	    <form action="" class="navbar-form navbar-right">
