--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -11,7 +11,39 @@
 
   <body>
 
-    <h1>My Account</h1>
+    <div class="container">
+      <h1>My Account</h1>
+
+      <nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+	  <div class="navbar-header">
+	    <a class="navbar-brand" href="#">WebsiteName</a>
+	  </div>
+	  <div>
+	    <ul class="nav navbar-nav">
+              <li><a href="/home">Home</a></li>
+              <li class="active"><a href="#">My Account</a></li>
+              <li><a href="/about">About</a></li> 
+	    </ul>
+
+	    <form action="" class="navbar-form navbar-right">
+	      <div class="input-group">
+		<input type="Search" placeholder="Search..." class="form-control" />
+		<div class="input-group-btn">
+		  <button class="btn btn-info">
+		    <span class="glyphicon glyphicon-search"></span>
+		  </button>
+		</div>
+	      </div>
+	    </form>
+	    
+	    <ul class="nav navbar-nav navbar-right">
+              <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	    </ul>
+	  </div>
+	</div>
+      </nav>
 
   </body>
 
