--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -45,6 +45,28 @@
 	</div>
       </nav>
 
+
+      <div class="row">
+
+	<!--    <div class="col-xs-12 col-sm-6 col-md-8"> -->
+        <div class="well well-lg">
+          <div class="row">
+            <div class="col-sm-4 col-md-4">
+              <img src="http://nytechblog.com/wp-content/uploads/2012/01/mike-zamansky.jpg" alt="" class="img-rounded img-responsive" width="250" height="350"/>
+            </div>
+            <!--    <div class="col-sm-6"> -->
+            <h1>Username</h1>
+            <small><cite title="New York, USA"><font size="4">New York, USA</font> <i class="glyphicon glyphicon-map-marker">
+            </i></cite></small>
+            <p>
+              <i class="glyphicon glyphicon-envelope"></i><font size="4">email@example.com</font>
+              <br />
+              <i class="glyphicon glyphicon-gift"></i><font size="4">January, 1st, 2020</font></p>
+            <div>       
+              <!--    </div> -->
+            </div>
+
+
   </body>
 
 
