--- a/templates/home.html
+++ b/templates/home.html
@@ -44,19 +44,15 @@
 	</div>
       </nav>
 
+<!--
       <div class="input-group margin-bottom-sm">
 	<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i>Post</span>
 	<input class="form-control" type="text" placeholder="Make a post">
       </div>
-
-      <div class="row">
-	<div>
-<!--
-	 {% for post in posts %}
-	 
-	 {% endfor %}
--->
-	</div>
+--> 
+      <div class="input-group">
+	<textarea class="form-control custom-control" rows="2" placeholder="Make a post" style="resize:none"></textarea>     
+	<span class="input-group-addon btn btn-primary">Post</span>
       </div>
       
     </div>
