Added a ton of middleware, achieved login and logout functionality across all pages.

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,18 +11,22 @@
   
   <body>
     <div class="container">
-      <h1>Title</h1>
+      <img class="img-responsive center-block"
+                             src="http://i.imgur.com/hv1Da5q.png"
+                             alt="Imgur is down so our banner is temporarily kill."
+                             width="70%"
+                             height="70%">
 
       <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
-	  <div class="navbar-header">
-	    <a class="navbar-brand" href="#">WebsiteName</a>
-	  </div>
+	  
 	  <div>
 	    <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="/myaccount">My Account</a></li>
-              <li><a href="/about">About</a></li> 
+              {% if LOGGEDIN %}
+			  <li><a href="/myaccount">My Account</a></li>
+              {% endif %}
+			  <li><a href="/about">About</a></li> 
 	    </ul>
 
 	    <form action="" class="navbar-form navbar-right">
@@ -35,11 +39,18 @@
 		</div>
 	      </div>
 	    </form>
-	    
+	    {% if LOGGEDIN %}
+		<ul class="nav navbar-nav navbar-right">
+              <li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
+			  <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+	    </ul>
+		{% else %}
 	    <ul class="nav navbar-nav navbar-right">
               <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
 	    </ul>
+		{% endif %}
+		
 	  </div>
 	</div>
       </nav>
@@ -52,7 +63,7 @@
 --> 
       <div class="input-group">
 	<textarea class="form-control custom-control" rows="3" placeholder="Make a post" style="resize:none"></textarea>     
-	<span class="input-group-addon btn btn-primary">Post</span>
+	<span class="input-group-addon btn btn-primary">Spread the news!</span>
       </div>
       
     </div>
