--- a/templates/about.html
+++ b/templates/about.html
@@ -9,20 +9,24 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
 
-<body>
+  <body>
     <div class="container">
-      <h1>About</h1>
+      <img class="img-responsive center-block"
+                             src="http://i.imgur.com/hv1Da5q.png"
+                             alt="Imgur is down so our banner is temporarily kill."
+                             width="70%"
+                             height="70%">
 
       <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
-	  <div class="navbar-header">
-	    <a class="navbar-brand" href="#">WebsiteName</a>
-	  </div>
+	  
 	  <div>
 	    <ul class="nav navbar-nav">
               <li><a href="/home">Home</a></li>
-              <li><a href="/myaccount">My Account</a></li> 
-              <li class="active"><a href="#">About</a></li>
+              {% if LOGGEDIN %}
+			  <li><a href="/myaccount">My Account</a></li>
+              {% endif %}
+              <li class="active"><a href="/about">About</a></li> 
 	    </ul>
 
 	    <form action="" class="navbar-form navbar-right">
@@ -36,10 +40,17 @@
 	      </div>
 	    </form>
 	    
+	    {% if LOGGEDIN %}
+		<ul class="nav navbar-nav navbar-right">
+              <li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
+			  <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+	    </ul>
+		{% else %}
 	    <ul class="nav navbar-nav navbar-right">
               <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
 	    </ul>
+		{% endif %}
 	  </div>
 	</div>
       </nav>
