--- a/templates/login.html
+++ b/templates/login.html
@@ -12,27 +12,28 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-	<form role="form">
+	<form method="POST" role="form">
 	  <h2><center>Login</center></h2>
 	  <hr class="colorgraph">
 
 	  <div class="form-group">
-	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Username" tabindex="3">
+	    <input type="text" name="user" class="form-control input-lg" placeholder="Username" tabindex="3">
 	  </div>
 
 	  <div class="form-group">
-	    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Password" tabindex="5">
+	    <input type="password" name="pass" class="form-control input-lg" placeholder="Password" tabindex="5">
 	  </div>
 	  
 	  
 	  <hr class="colorgraph">
 	  <div class="form-group">
-	    <a href="#" class="btn btn-success btn-block btn-lg">Sign In</a>
+	    
+		<input type="submit" class="btn btn-success btn-block btn-lg" name="button" value="Sign In">
 	  </div>
 	</form>
       </div>
     </div>
-    <!-- Modal -->
+    <!-- Modal 
     <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
 	<div class="modal-content">
@@ -46,5 +47,14 @@
 	</div>
       </div>
     </div>
+	Modal -->
   </div>
+  {% if NOTLOGGEDIN %}
+  <center>
+  <h1> 
+  {{NOTLOGGEDIN}}
+  </h1>
+  </center>
+  {% endif %}
+  
 </html>
