--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,7 +17,7 @@
 	  <hr class="colorgraph">
 
 	  <div class="form-group">
-	    <input type="text" name="display_name" class="form-control input-lg" placeholder="Username" tabindex="3">
+	    <input type="text" name="user" class="form-control input-lg" placeholder="Username" tabindex="3">
 	  </div>
 	  <div class="row">
 	    <div class="col-xs-6 col-sm-6 col-md-6">
