--- a/templates/home.html
+++ b/templates/home.html
@@ -62,9 +62,13 @@
       </div>
 --> 
       <div class="input-group">
-	<textarea class="form-control custom-control" rows="3" placeholder="Make a post" style="resize:none"></textarea>     
-	<span class="input-group-addon btn btn-primary">Spread the news!</span>
+	<textarea class="form-control custom-control" rows="1" placeholder="Title" style="resize:none"></textarea>     
+	<span class="input-group-addon btn btn-primary"></span>
       </div>
+
+      <div class-"input-group">
+      	<textarea class="form-control custom-control" rows="3" placeholder="Make a post" style="resize:none"></textarea>
+      	<span class="input-group-addon btn btn-primary">Spread the news!</span>
       
     </div>
 
