Unified title and context boxes for new posts

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,17 +61,13 @@
 	<input class="form-control" type="text" placeholder="Make a post">
       </div>
 --> 
-      <div class="input-group">
-	<textarea class="form-control custom-control" rows="1" placeholder="Title" style="resize:none"></textarea>     
-	<span class="input-group-addon btn btn-primary"></span>
-      </div>
-
-      <div class-"input-group">
-      	<textarea class="form-control custom-control" rows="3" placeholder="Make a post" style="resize:none"></textarea>
-      	<span class="input-group-addon btn btn-primary">Spread the news!</span>
-      
-    </div>
-
+<h2> Make a new post: </h2>
+	<form method="POST" role="form">
+		<textarea class="form-control custom-control" rows="1" placeholder="Title" style="resize:none"></textarea>     
+      	<textarea class="form-control custom-control" rows="3" placeholder="Post content" style="resize:none"></textarea>
+      	<span class="input-group-addon btn btn-primary">Spread the news!</span>   
+    
+	</form>
   </body>    
 
 </html>
