Updated README, minor fixes to myaccount.html.

--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -59,16 +59,16 @@
         <div class="well well-lg">
           <div class="row">
             <div class="col-sm-4 col-md-4">
-              <img src="http://nytechblog.com/wp-content/uploads/2012/01/mike-zamansky.jpg" alt="" class="img-rounded img-responsive" width="250" height="350"/>
+              <img src="https://account.socialbakers.com/default_user.png" alt="" class="img-rounded img-responsive" width="300 height="300"/>
             </div>
             <!--    <div class="col-sm-6"> -->
-            <h1>Username</h1>
-            <small><cite title="New York, USA"><font size="4">New York, USA</font> <i class="glyphicon glyphicon-map-marker">
-            </i></cite></small>
+            <h1>{{LOGGEDIN}}</h1>
+            <small><cite title="New York, USA"><i class="glyphicon glyphicon-map-marker">
+            </i><font size="4">&nbsp; New York, USA</font> </cite></small>
             <p>
-              <i class="glyphicon glyphicon-envelope"></i><font size="4">email@example.com</font>
+              <i class="glyphicon glyphicon-envelope"></i><font size="4">&nbsp; No email on file</font>
               <br />
-              <i class="glyphicon glyphicon-gift"></i><font size="4">January, 1st, 2020</font></p>
+              <i class="glyphicon glyphicon-gift"></i><font size="4">&nbsp; No date of birth on file</font></p>
             <div>       
             </div>
 
