We are so done.

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,17 +28,6 @@
               {% endif %}
               <li class="active"><a href="/about">About</a></li> 
 	    </ul>
-
-	    <form action="" class="navbar-form navbar-right">
-	      <div class="input-group">
-		<input type="Search" placeholder="Search..." class="form-control" />
-		<div class="input-group-btn">
-		  <button class="btn btn-info">
-		    <span class="glyphicon glyphicon-search"></span>
-		  </button>
-		</div>
-	      </div>
-	    </form>
 	    
 	    {% if LOGGEDIN %}
 		<ul class="nav navbar-nav navbar-right">
@@ -54,6 +43,17 @@
 	  </div>
 	</div>
       </nav>
+	  <br><br>
+	  <h2>
+	  <center>"Spread your knowledge. Spread it using Spreddit®!" --Socrates, probably. </center>
+	  <br><br>
+	  Spreddit® (in no way a knockoff of Reddit®) is a forum for spreading news.<br><br>
+	  You can create an account and make posts, or comment on others' posts.<br><br>
+	  You can delete your own posts along with all the comments on them.<br><br>
+	  Posts and comments are timestamped; posts appear in order of newest first, while comments are listed in chronological order. <br><br>
+	  There is a search box on the homepage that lets you retrieve all posts and comments that contain a certain phrase. <br><br>
+	  Go forth, and Spreddit!
+	  </h2>
   </body>
 
 
