--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  </head>
+{% block contents %}
 
   <div class="container">
 
@@ -47,7 +41,7 @@
 	  -->
 	  <hr class="colorgraph">
 	  <div class="form-group">
-	    <input type="submit" name="button" "value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7">
+	    <input type="submit" name="button" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7">
 	  
 	  </div>
 	</form>
@@ -76,5 +70,5 @@
   </h1>
   </center>
   {% endif %}
-  
-</html>
+
+{% endblock %}
