--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  </head>
+{% block contents %}
 
   <div class="container">
 
@@ -57,4 +51,4 @@
   </center>
   {% endif %}
   
-</html>
+{% endblock %}
