more on base for about and home

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,18 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+      <img class="img-responsive center-block"
+           src="http://i.imgur.com/hv1Da5q.png"
+           alt="Imgur is down so our banner is temporarily kill."
+           width="70%"
+           height="70%">
+      <nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+	  
+	  <div>
+	    <ul class="nav navbar-nav">
+
     {% block contents  %}
     {% endblock %}
   </body>
