--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -1,27 +1,7 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="en">
-  <head>
-    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  </head>
-  
-  <body>
-    <div class="container">
-      <img class="img-responsive center-block"
-                             src="http://i.imgur.com/hv1Da5q.png"
-                             alt="Imgur is down so our banner is temporarily kill."
-                             width="70%"
-                             height="70%">
+{% block contents %}
 
-      <nav class="navbar navbar-inverse">
-	<div class="container-fluid">
-	  
-	  <div>
-	    <ul class="nav navbar-nav">
               <li class="active"><a href="/home">Home</a></li>
               {% if LOGGEDIN %}
 			  <li><a href="/myaccount">My Account</a></li>
@@ -92,6 +72,5 @@ All posts containing the query in the post title, body, or any comments are disp
 	<br>
 	<hr>
 	{% endfor %}
-	
-	</body>   
-</html>
+
+{% endblock %}
