pulls from image file instead of internet

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <img class="img-responsive center-block"
-           src="http://i.imgur.com/hv1Da5q.png"
+           src="/../static/spreddit.png"
            alt="Imgur is down so our banner is temporarily kill."
            width="70%"
            height="70%">
