--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,6 +44,7 @@
 	    <input type="submit" name="button" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7">
 	  
 	  </div>
+<button class="btn btn-primary btn-block btn-lg" href="/home">Home</a>
 	</form>
       </div>
     </div>
