--- a/templates/about.html
+++ b/templates/about.html
@@ -1,27 +1,11 @@
 {% extends "base.html" %}
 
-{% block contents %}
+{% block navbar %}
 <li><a href="/home">Home</a></li>
-{% if LOGGEDIN %}
-<li><a href="/myaccount">My Account</a></li>
-{% endif %}
-<li class="active"><a href="/about">About</a></li> 
-</ul>
+{% endblock %}
 
-{% if LOGGEDIN %}
-<ul class="nav navbar-nav navbar-right">
-  <li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
-  <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
-</ul>
-{% else %}
-<ul class="nav navbar-nav navbar-right">
-  <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-  <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
-</ul>
-{% endif %}
-</div>
-</div>
-</nav>
+{% block contents %}
+
 <br><br>
 <h2>
   <center>"Spread your knowledge. Spread it using Spreddit®!" --Socrates, probably. </center>
