--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
+{% block navbar %}
+<li><a href="/home">Home</a></li>
+{% if LOGGEDIN %}
+<li><a href="/myaccount">My Account</a></li>
+{% endif %}
+<li><a href="/about">About</a></li> 
+</ul>
+{% endblock %}
+
 {% block contents %}
 
   <div class="container">
