Readability improvements... I hope.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,58 +1,49 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
-  <head>
-    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <img class="img-responsive center-block"
-           src="/../static/spreddit.png"
-           alt="Imgur is down so our banner is temporarily kill."
-           width="70%"
-           height="70%">
-      <nav class="navbar navbar-inverse">
-	<div class="container-fluid">
-	  
-	  <div>
-	    <ul class="nav navbar-nav">
-	      {% block navbar %}
-	      {% endblock %}
-	      
-	    
-	    <form action="" class="navbar-form navbar-right" method="POST">
-	      <div class="input-group">
-		<input type="Search" name="query" placeholder="Search..." class="form-control" />
-		<div class="input-group-btn">
-		  <button class="btn btn-info" name="search">
-		    <span class="glyphicon glyphicon-search"></span>
-		  </button>
-		</div>
-	      </div>
-	    </form>
-	    {% if LOGGEDIN %}
-	    <ul class="nav navbar-nav navbar-right">
-	      <li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
-	      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
-	    </ul>
-	    {% else %}
-	    <ul class="nav navbar-nav navbar-right">
-	      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
-	    </ul>
-	    {% endif %}
-	    
-	  </div>
-	</div>
-      </nav>
-      
-      {% block contents  %}
-      {% endblock %}
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+</head>
+  
+<body><div class="container">
+
+	<img class="img-responsive center-block"
+		src="/../static/spreddit.png"
+		width="70%"
+		height="70%">
+	
+	<nav class="navbar navbar-inverse"><div class="container-fluid"><div>
+
+		<ul class="nav navbar-nav">
+			{% block navbar %}{% endblock %}
+		</ul>
+			
+			<form action="" class="navbar-form navbar-right" method="POST"><div class="input-group">
+				<input type="Search" name="query" placeholder="Search..." class="form-control" />
+				<div class="input-group-btn">
+					<button class="btn btn-info" name="search">
+						<span class="glyphicon glyphicon-search"></span>
+					</button>
+				</div>
+			</div></form>
+
+			<ul class="nav navbar-nav navbar-right">
+				{% if LOGGEDIN %}
+					<li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
+					<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+				{% else %}
+					<li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+					<li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+				{% endif %}
+			</ul>
+
+	</div></div></nav>
+
+	{% block contents %}{% endblock %}
+
+</body>
   
 </html>
