--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
+
 {% block navbar %}
-<li class="active"><a href="/home">Home</a></li>
+  <li class="active"><a href="/">Home</a></li>
 {% if LOGGEDIN %}
-<li><a href="/myaccount">My Account</a></li>
+  <li><a href="/myaccount">My Account</a></li>
 {% endif %}
-<li><a href="/about">About</a></li> 
-</ul>
+  <li><a href="/about">About</a></li>
 {% endblock %}
+
+
 {% block contents %}
 
 <!--
@@ -16,41 +18,42 @@
       <input class="form-control" type="text" placeholder="Make a post">
     </div>
     --> 
-<h2> Make a new post: </h2>
+
+<h2>Make a new post:</h2>
 <form method="POST" role="form">
-  <textarea type="text" name="title" class="form-control custom-control" rows="1" placeholder="Title" style="resize:none"></textarea>     
+  <textarea type="text" name="title" class="form-control custom-control" rows="1" placeholder="Title" style="resize:none"></textarea>
   <textarea type="text" name="cont" class="form-control custom-control" rows="3" placeholder="Post content" style="resize:none"></textarea>
-  <input type="submit" class="btn btn-info" name="submitpost" value="Spread the news!">  
+  <input type="submit" class="btn btn-info" name="submitpost" value="Spread the news!">
+</form>
+
+{% for post in POSTS: %}
+  <b><h1>{{post[0]}}</h1></b>
+  Posted by {{post[5]}} on {{post[4]}} <h3>{{post[1]}}</h3> 
   
-</form>
-
-{% for i in POSTS: %}
-<b><h1> {{i[0]}} </h1></b> Posted by {{i[5]}} on {{i[4]}}<h3> {{i[1]}} </h3> 
-{% if LOGGEDIN == i[5]%}
-<form method="POST" role="form">
-  <input type="submit" class="button" name="{{i[2]}}" value="Delete this post.">
-</form>
-{% endif %}
-<br>
-{% for z in COMMENTS: %}
-{% if z[0][0] == i[2] %} <!--if this set's comment IDs match this post ID--> 
-{% for x in z %}
-&nbsp;&nbsp;&nbsp;&nbsp;{{x[3]}}, &nbsp;{{x[4]}} commented: {{x[1]}} <br>
+  {% if LOGGEDIN == post[5] %}
+    <form method="POST" role="form">
+      <input type="submit" class="button" name="{{post[2]}}" value="Delete this post.">
+    </form>
+  {% endif %}
+  <br>
+  {% for comment_set in COMMENTS: %}
+    {% if comment_set[0][0] == post[2] %} <!--if this set's comment IDs match this post ID--> 
+      {% for comment in comment_set %}
+        &nbsp;&nbsp;&nbsp;&nbsp;{{comment[3]}}, &nbsp;{{comment[4]}} commented: {{comment[1]}}<br>
+      {% endfor %}
+    {% endif %}
+  {% endfor %}
+  <br>
+  <form method="POST" role="form">
+    <div class="col-xs-4">
+      <textarea type="text" name="{{post[2]}}" id="ex3" class="form-control custom-control" rows="1" placeholder="Make a comment..." style="resize:none"></textarea>
+      <input type="submit" class="button" name="submitcomment" value="Comment.">
+    </div>
+  </form>
+  <br>
+  <br>
+  <br>
+  <hr>
 {% endfor %}
-{% endif %}
-{% endfor %}
-<br>
-<form method="POST" role="form">
-  <div class="col-xs-4">
-    <textarea type="text" name="{{i[2]}}" id="ex3" class="form-control custom-control" rows="1" placeholder="Make a comment..." style="resize:none"></textarea>
-    <input type="submit" class="button" name="submitcomment" value="Comment.">
-  </div>
-</form>
-<br>
-<br>
-<br>
-<hr>
-{% endfor %}
-
 
 {% endblock  %}
