--- a/templates/login.html
+++ b/templates/login.html
@@ -1,39 +1,33 @@
 {% extends "base.html" %}
 
+
 {% block navbar %}
-<li><a href="/home">Home</a></li>
+	<li><a href="/home">Home</a></li>
 {% if LOGGEDIN %}
-<li><a href="/myaccount">My Account</a></li>
+	<li><a href="/myaccount">My Account</a></li>
 {% endif %}
-<li><a href="/about">About</a></li> 
-</ul>
+	<li><a href="/about">About</a></li> 
 {% endblock %}
 
+
 {% block contents %}
-
   <div class="container">
-
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-	<form method="POST" role="form">
-	  <h2><center>Login</center></h2>
-	  <hr class="colorgraph">
-
-	  <div class="form-group">
-	    <input type="text" name="user" class="form-control input-lg" placeholder="Username" tabindex="3">
-	  </div>
-
-	  <div class="form-group">
-	    <input type="password" name="pass" class="form-control input-lg" placeholder="Password" tabindex="5">
-	  </div>
-	  
-	  
-	  <hr class="colorgraph">
-	  <div class="form-group">
-	    
-		<input type="submit" class="btn btn-success btn-block btn-lg" name="button" value="Sign In">
-	  </div>
-	</form>
+	  		<h2><center>Login</center></h2>
+				<form method="POST" role="form">
+	  		<hr class="colorgraph">
+					<div class="form-group">
+						<input type="text" name="user" class="form-control input-lg" placeholder="Username" tabindex="3">
+					</div>
+					<div class="form-group">
+						<input type="password" name="pass" class="form-control input-lg" placeholder="Password" tabindex="5">
+					</div>
+				<hr class="colorgraph">
+					<div class="form-group">
+						<input type="submit" class="btn btn-success btn-block btn-lg" name="button" value="Sign In">
+					</div>
+				</form>
       </div>
     </div>
     <!-- Modal 
@@ -51,13 +45,10 @@
       </div>
     </div>
 	Modal -->
-  </div>
-  {% if NOTLOGGEDIN %}
-  <center>
-  <h1> 
-  {{NOTLOGGEDIN}}
-  </h1>
-  </center>
-  {% endif %}
+	</div>
   
+  {% if NOTLOGGEDIN %}
+  <center><h1>{{NOTLOGGEDIN}}</h1></center>
+  {% endif %}
+
 {% endblock %}
