--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -1,68 +1,29 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="en">
-  
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  </head>
+{% block navbar %}
+<li><a href="/home">Home</a></li>
+<li class="active"><a href="/myaccount">My Account</a></li>
+<li><a href="/about">About</a></li>
+{% endblock %}
 
-  <body>
-    <div class="container">
-      <img class="img-responsive center-block"
-                             src="http://i.imgur.com/hv1Da5q.png"
-                             alt="Imgur is down so our banner is temporarily kill."
-                             width="70%"
-                             height="70%">
+{% block contents %}
 
-      <nav class="navbar navbar-inverse">
-	<div class="container-fluid">
-	  
-	  <div>
-	    <ul class="nav navbar-nav">
-              <li><a href="/home">Home</a></li>
-              <li class="active"><a href="/myaccount">My Account</a></li>
-              <li><a href="/about">About</a></li> 
-	    </ul>
-	    
-	    {% if LOGGEDIN %}
-		<ul class="nav navbar-nav navbar-right">
-              <li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
-			  <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
-	    </ul>
-		{% else %}
-	    <ul class="nav navbar-nav navbar-right">
-              <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
-	    </ul>
-		{% endif %}
-	  </div>
-	</div>
-      </nav>
+<div class="row">
 
+  <div class="well well-lg">
+    <div class="row">
+      <div class="col-sm-4 col-md-4">
+        <img src="https://account.socialbakers.com/default_user.png" alt="" class="img-rounded img-responsive" width="300 height="300"/>
+																      </div>
+      <!--    <div class="col-sm-6"> -->
+      <h1>{{LOGGEDIN}}</h1>
+      <small><cite title="New York, USA"><i class="glyphicon glyphicon-map-marker">
+          </i><font size="4">&nbsp; New York, USA</font> </cite></small>
+      <p>
+        <i class="glyphicon glyphicon-envelope"></i><font size="4">&nbsp; No email on file</font>
+        <br />
+        <i class="glyphicon glyphicon-gift"></i><font size="4">&nbsp; No date of birth on file</font></p>
+      <div>       
+      </div>
 
-      <div class="row">
-
-        <div class="well well-lg">
-          <div class="row">
-            <div class="col-sm-4 col-md-4">
-              <img src="https://account.socialbakers.com/default_user.png" alt="" class="img-rounded img-responsive" width="300 height="300"/>
-            </div>
-            <!--    <div class="col-sm-6"> -->
-            <h1>{{LOGGEDIN}}</h1>
-            <small><cite title="New York, USA"><i class="glyphicon glyphicon-map-marker">
-            </i><font size="4">&nbsp; New York, USA</font> </cite></small>
-            <p>
-              <i class="glyphicon glyphicon-envelope"></i><font size="4">&nbsp; No email on file</font>
-              <br />
-              <i class="glyphicon glyphicon-gift"></i><font size="4">&nbsp; No date of birth on file</font></p>
-            <div>       
-            </div>
-
-
-  </body>
-
-
-</html>
+{% endblock %}
