--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
-{% block navbar %}
-<li><a href="/home">Home</a></li>
+{% block nav %}
 {% if LOGGEDIN %}
-<li><a href="/myaccount">My Account</a></li>
+<li><a href="/myaccount"><span class="glyphicon glyphicon-user"></span> &nbsp;Hello, {{LOGGEDIN}}!</a></li>
+<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+{% else %}
+<li class="active"><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+<li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
 {% endif %}
-<li><a href="/about">About</a></li> 
-</ul>
 {% endblock %}
 
 {% block contents %}
